# shad_os

./: Cargo.toml  build.rs
shad_kernerl/: .gitignore  Cargo.toml
shad_kernerl/src/: main.rs  std.rs
shad_kernerl/src/std/: writer.rs
shad_kernerl/src/std/writer/: constants.rs  frame_buffer_writer.rs
src/: main.rs
