[package]
name = "shad_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bootloader = "0.11"
shad_kernerl = { path = "shad_kernerl", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]

ovmf-prebuilt = "0.1.0-alpha.1"

[workspace]
members=["shad_kernerl"]

