[package]
name = "shad_kernerl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader_api = "0.11"
x86_64 = "0.14"
noto-sans-mono-bitmap = "0.2"
good_memory_allocator = "0.1"
lazy_static = {version="1.4",features=["spin_no_std"]}
spin = "0.9.8"
